# daytrip

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: auth.rs  core.rs  download.rs  main.rs  metadata.rs  playlist.rs
